[project]
name = "price-monitoring"
version = "0.1.0"
description = "Мониторинг цен облигаций MOEX и постановка задач на отправку алертов"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "google-cloud-tasks>=2.19",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[tool.basedpyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
